[package]
name = "test2_pcap"
version = "0.1.0"
authors = ["emanuele-f <black.silver@hotmail.it>"]

[dependencies]
libc = "0.2"
pcap = { git = "https://github.com/emanuele-f/pcap", features = ["tokio"] }
etherparse = "0.5.0"
eui48 = "*"
log = { version = "*", features = ["release_max_level_info"] }
simple_logger = "*"
ndpi = { path = "../ndpi" }
termion = "*"
tui = "0.2.0"
